[package]
name = "kdtree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "kd-tree",
    "multi-dimension",
    "point-3d"
]

[dependencies]
kd-tree = { path = "./kd-tree" }
multi-dimension = { path = "./multi-dimension" }

[dev-dependencies]
criterion = "0.3"
rand = "0.8.4"

[[bench]]
name = "benchmark"
harness = false